
etcdir		= $(sysconfdir)
fontdir		= $(datadir)/fonts

sbin_SCRIPTS	= init

etc_DATA	= etc/arp2.conf etc/arp2-nvidia-xorg.conf \
		  etc/issue-1.0 etc/issue-1.1 etc/issue-1.2 etc/issue-1.3 \
		  etc/issue-2.0 etc/issue-3.0 etc/issue-3.1

font_DATA	= share/fonts/tech8dbl.psf      share/fonts/tech8.psf \
		  share/fonts/topaz8dbl.psf     share/fonts/topaz8.psf \
		  share/fonts/topaz_new8dbl.psf share/fonts/topaz_new8.psf \
		  share/fonts/xen13dbl.psf      share/fonts/xen13.psf


EXTRA_DIST	= etc/ init share/
