
etcdir		= $(sysconfdir)
fontdir		= $(datadir)/fonts

sbin_SCRIPTS	= arp2-config arp2-init arp2-xinit arp2-profile

etc_DATA	= etc/arp2.conf.default \
		  etc/arp2-xorg.conf.m4 etc/arp2-xorg.monitor.default \
		  etc/arp2-xorg.keyboard.default etc/arp2-xorg.mouse.default \
		  etc/arp2-issue-1.0 etc/arp2-issue-1.1 etc/arp2-issue-1.2 etc/arp2-issue-1.3 \
		  etc/arp2-issue-2.0 etc/arp2-issue-3.0 etc/arp2-issue-3.1

font_DATA	= share/fonts/tech8dbl.psf      share/fonts/tech8.psf \
		  share/fonts/topaz8dbl.psf     share/fonts/topaz8.psf \
		  share/fonts/topaz_new8dbl.psf share/fonts/topaz_new8.psf \
		  share/fonts/xen13dbl.psf      share/fonts/xen13.psf


EXTRA_DIST	= etc/ arp2-init share/
