#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.59])
AC_INIT([arp2-init], [0.1], [martin@blom.org])
AC_CONFIG_AUX_DIR([aux])
AM_INIT_AUTOMAKE([arp2-init], [0.1])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile arp2-config arp2-init])
AC_OUTPUT
