
INCLUDE (CheckIncludeFile)
INCLUDE (CheckIncludeFiles)
INCLUDE (CheckLibraryExists)

# Check for thread & X11 support
FIND_PACKAGE (Threads)
FIND_PACKAGE (X11)

# Check for glgfx
CHECK_INCLUDE_FILE ("glgfx.h" HAVE_GLGFX_H)
CHECK_LIBRARY_EXISTS (glgfx glgfx_init_a "" HAVE_GLGFX_GLGFX_INIT)
IF (NOT HAVE_GLGFX_H OR NOT HAVE_GLGFX_GLGFX_INIT)
  MESSAGE (SEND_ERROR "glgfx not found")
ENDIF (NOT HAVE_GLGFX_H OR NOT HAVE_GLGFX_GLGFX_INIT)

# Check for XComposite
CHECK_INCLUDE_FILES ("X11/Xlib.h;X11/extensions/Xcomposite.h" HAVE_XCOMPOSITE_H)
CHECK_LIBRARY_EXISTS (Xcomposite XCompositeQueryVersion "" HAVE_XCOMPOSITE_XCOMPOSITEQUERYVERSION)
IF (NOT HAVE_XCOMPOSITE_H OR NOT HAVE_XCOMPOSITE_XCOMPOSITEQUERYVERSION)
  MESSAGE (SEND_ERROR "Xcomposite X11 extension not found")
ENDIF (NOT HAVE_XCOMPOSITE_H OR NOT HAVE_XCOMPOSITE_XCOMPOSITEQUERYVERSION)

# Check for popt
CHECK_INCLUDE_FILE ("popt.h" HAVE_POPT_H)
CHECK_LIBRARY_EXISTS (popt poptGetContext "" HAVE_POPT_POPTGETCONTEXT)
IF (NOT HAVE_POPT_H OR NOT HAVE_POPT_POPTGETCONTEXT)
  MESSAGE (SEND_ERROR "popt not found")
ENDIF (NOT HAVE_POPT_H OR NOT HAVE_POPT_POPTGETCONTEXT)

# Add warning options if using gcc
IF (${CMAKE_COMPILER_IS_GNUCC})
  SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -W -Wall")
ENDIF (${CMAKE_COMPILER_IS_GNUCC})

ADD_EXECUTABLE (glgfxComposer glgfxComposer.c)
TARGET_LINK_LIBRARIES (glgfxComposer popt glgfx Xcomposite 
		      ${CMAKE_THREAD_LIBS_INIT} ${X11_LIBRARIES})
